--- a/docbuild/api/Scrapbook101core.Controllers.ItemController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.ItemController.yml
@@ -25,7 +25,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: ItemController
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 17
@@ -38,9 +38,7 @@ items:
     content: 'public class ItemController : Controller, IActionFilter, IAsyncActionFilter, IFilterMetadata, IDisposable'
     content.vb: >-
       Public Class ItemController
-
           Inherits Controller
-
           Implements IActionFilter, IAsyncActionFilter, IFilterMetadata, IDisposable
   inheritance:
   - System.Object
@@ -269,7 +267,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: .ctor
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 21
@@ -302,7 +300,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: IndexAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 33
@@ -354,7 +352,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: DetailsAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 56
@@ -402,7 +400,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CreateAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 70
@@ -447,7 +445,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CreateAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 87
@@ -509,7 +507,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: EditAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 141
@@ -564,7 +562,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: EditAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 166
@@ -626,7 +624,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: DeleteAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 210
@@ -681,7 +679,7 @@ items:
     remote:
       path: Scrapbook101core/Controllers/ItemController.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: DeleteConfirmedAsync
     path: ../Scrapbook101core/Controllers/ItemController.cs
     startLine: 228
