--- a/docbuild/api/Scrapbook101core.Models.CategoryItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.CategoryItem.yml
@@ -19,7 +19,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Category.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CategoryItem
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 31
@@ -62,7 +62,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Category.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Name
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 33
@@ -73,16 +73,12 @@ items:
     content: >-
       [Required(ErrorMessage = "Name is required.")]
 
-      [JsonProperty(PropertyName = "name")]
-
       public string Name { get; set; }
     parameters: []
     return:
       type: System.String
     content.vb: >-
       <Required(ErrorMessage:="Name is required.")>
-
-      <JsonProperty(PropertyName:="name")>
 
       Public Property Name As String
   overload: Scrapbook101core.Models.CategoryItem.Name*
@@ -94,13 +90,6 @@ items:
     - name: ErrorMessage
       type: System.String
       value: Name is required.
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: name
   modifiers.csharp:
   - public
   - get
@@ -122,7 +111,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Category.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Description
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 37
@@ -130,26 +119,12 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: >-
-      [JsonProperty(PropertyName = "description")]
-
-      public string Description { get; set; }
+    content: public string Description { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: >-
-      <JsonProperty(PropertyName:="description")>
-
-      Public Property Description As String
+    content.vb: Public Property Description As String
   overload: Scrapbook101core.Models.CategoryItem.Description*
-  attributes:
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: description
   modifiers.csharp:
   - public
   - get
@@ -171,7 +146,7 @@ items:
     remote:
       path: Scrapbook101core/Models/Category.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CategoryFields
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 40
@@ -179,26 +154,12 @@ items:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
   syntax:
-    content: >-
-      [JsonProperty(PropertyName = "categoryFields")]
-
-      public CategoryFields CategoryFields { get; set; }
+    content: public CategoryFields CategoryFields { get; set; }
     parameters: []
     return:
       type: Scrapbook101core.Models.CategoryFields
-    content.vb: >-
-      <JsonProperty(PropertyName:="categoryFields")>
-
-      Public Property CategoryFields As CategoryFields
+    content.vb: Public Property CategoryFields As CategoryFields
   overload: Scrapbook101core.Models.CategoryItem.CategoryFields*
-  attributes:
-  - type: Newtonsoft.Json.JsonPropertyAttribute
-    ctor: Newtonsoft.Json.JsonPropertyAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: PropertyName
-      type: System.String
-      value: categoryFields
   modifiers.csharp:
   - public
   - get
