--- a/docbuild/api/Scrapbook101core.DocumentDBRepository-1.yml
+++ b/docbuild/api/Scrapbook101core.DocumentDBRepository-1.yml
@@ -23,7 +23,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: DocumentDBRepository
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 46
@@ -35,7 +35,6 @@ items:
   syntax:
     content: >-
       public static class DocumentDBRepository<T>
-
           where T : class
     typeParameters:
     - id: T
@@ -76,7 +75,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 53
@@ -116,7 +115,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetItemsAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 79
@@ -164,7 +163,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CreateItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 97
@@ -177,7 +176,7 @@ items:
     - id: item
       type: '{T}'
     return:
-      type: System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
+      type: System.Threading.Tasks.Task{Document}
     content.vb: Public Shared Function CreateItemAsync(item As T) As Task(Of Document)
   overload: Scrapbook101core.DocumentDBRepository`1.CreateItemAsync*
   nameWithType.vb: DocumentDBRepository(Of T).CreateItemAsync(T)
@@ -204,7 +203,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: UpdateItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 102
@@ -219,7 +218,7 @@ items:
     - id: item
       type: '{T}'
     return:
-      type: System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
+      type: System.Threading.Tasks.Task{Document}
     content.vb: Public Shared Function UpdateItemAsync(id As String, item As T) As Task(Of Document)
   overload: Scrapbook101core.DocumentDBRepository`1.UpdateItemAsync*
   nameWithType.vb: DocumentDBRepository(Of T).UpdateItemAsync(String, T)
@@ -246,7 +245,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: DeleteItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 107
@@ -286,7 +285,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Initialize
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 112
@@ -320,7 +319,7 @@ items:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetCategoryListDocumentAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 226
@@ -1022,15 +1021,15 @@ references:
   name: T
   nameWithType: T
   fullName: T
-- uid: System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
-  commentId: T:System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
+- uid: System.Threading.Tasks.Task{Document}
+  commentId: T:System.Threading.Tasks.Task{Document}
   parent: System.Threading.Tasks
   definition: System.Threading.Tasks.Task`1
   name: Task<Document>
   nameWithType: Task<Document>
-  fullName: System.Threading.Tasks.Task<Microsoft.Azure.Documents.Document>
+  fullName: System.Threading.Tasks.Task<Document>
   nameWithType.vb: Task(Of Document)
-  fullName.vb: System.Threading.Tasks.Task(Of Microsoft.Azure.Documents.Document)
+  fullName.vb: System.Threading.Tasks.Task(Of Document)
   name.vb: Task(Of Document)
   spec.csharp:
   - uid: System.Threading.Tasks.Task`1
@@ -1041,10 +1040,10 @@ references:
   - name: <
     nameWithType: <
     fullName: <
-  - uid: Microsoft.Azure.Documents.Document
+  - uid: Document
     name: Document
     nameWithType: Document
-    fullName: Microsoft.Azure.Documents.Document
+    fullName: Document
     isExternal: true
   - name: '>'
     nameWithType: '>'
@@ -1058,10 +1057,10 @@ references:
   - name: '(Of '
     nameWithType: '(Of '
     fullName: '(Of '
-  - uid: Microsoft.Azure.Documents.Document
+  - uid: Document
     name: Document
     nameWithType: Document
-    fullName: Microsoft.Azure.Documents.Document
+    fullName: Document
     isExternal: true
   - name: )
     nameWithType: )
