--- a/docbuild/api/Scrapbook101core.Program.yml
+++ b/docbuild/api/Scrapbook101core.Program.yml
@@ -18,7 +18,7 @@ items:
     remote:
       path: Scrapbook101core/Program.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Program
     path: ../Scrapbook101core/Program.cs
     startLine: 22
@@ -62,7 +62,7 @@ items:
     remote:
       path: Scrapbook101core/Program.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Main
     path: ../Scrapbook101core/Program.cs
     startLine: 28
@@ -103,7 +103,7 @@ items:
     remote:
       path: Scrapbook101core/Program.cs
       branch: main
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CreateWebHostBuilder
     path: ../Scrapbook101core/Program.cs
     startLine: 39
