--- a/docbuild/api/Scrapbook101core.Controllers.CategoryController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.CategoryController.yml
@@ -26,7 +26,7 @@ items:
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Controllers
-  summary: "\nIn the Model-View-Controller pattern, the controller processes the input. In this case, it is all the input involving\ncategory operations.\n"
+  summary: "\nIn the Model-View-Controller pattern, the controller processes the input. In this case, it is all the input\ninvolving category operations.\n"
   example: []
   syntax:
     content: 'public class CategoryController : Controller, IActionFilter, IAsyncActionFilter, IFilterMetadata, IDisposable'
